Fix Sonar issues: remove commented code, unused methods/parameters, fix Optional access, merge if statements, replace Stream.collect with toList, replace Stack with Deque, fix Map.containsKey